--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
     -->
     </script>
     <title>Symbolic Math- Solve any math problem.</title>
-    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1395375581684994"
-     crossorigin="anonymous"></script> -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1395375581684994"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
