--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
      crossorigin="anonymous"></script>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>An Advanced calculator app designed to solve different kinds of high school math problems. Solve Algebra, Trignometry,Calculus etc</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
