--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,8 @@
     -->
     </script>
     <title>Symbolic Math- Solve any math problem.</title>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1395375581684994"
-     crossorigin="anonymous"></script>
   </head>
+<script type="text/javascript" src="https://s.skimresources.com/js/220076X1701301.skimlinks.js"></script>
   <body>
     <noscript>An Advanced calculator app designed to solve different kinds of high school math problems. Solve Algebra, Trignometry,Calculus etc</noscript>
     <div id="root"></div>
